// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox basic renders checked checkbox 1`] = `
<label
  className="toggleLabel label--minor display--block"
  htmlFor="hello"
>
  <WithLoading(Flex)
    align="center"
    className="minTouchHeight"
  >
    <WithLoading(FlexItem)
      shrink={true}
    >
      <input
        checked={true}
        className="checkbox visibility--a11yHide"
        id="hello"
        name="greeting"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="hello"
      />
      <span
        className="display--block align--center fauxToggle fauxToggle--checkbox checked"
      >
        <Icon
          className="display--flex flex--center checkbox-indicator"
          shape="check"
          size="xs"
        />
      </span>
    </WithLoading(FlexItem)>
    <WithLoading(FlexItem)
      className="toggleLabel-container"
    >
      <span
        className="text--bold"
      >
        Hello!
      </span>
    </WithLoading(FlexItem)>
  </WithLoading(Flex)>
</label>
`;

exports[`Checkbox basic renders unchecked checkbox 1`] = `
<label
  className="toggleLabel label--minor display--block"
  htmlFor="hello"
>
  <WithLoading(Flex)
    align="center"
    className="minTouchHeight"
  >
    <WithLoading(FlexItem)
      shrink={true}
    >
      <input
        checked={false}
        className="checkbox visibility--a11yHide"
        id="hello"
        name="greeting"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="hello"
      />
      <span
        className="display--block align--center fauxToggle fauxToggle--checkbox"
      />
    </WithLoading(FlexItem)>
    <WithLoading(FlexItem)
      className="toggleLabel-container"
    >
      <span
        className=""
      >
        Hello!
      </span>
    </WithLoading(FlexItem)>
  </WithLoading(Flex)>
</label>
`;
